--- a/FrontEnd/components/tournament/PlayerCards.module.css
+++ b/FrontEnd/components/tournament/PlayerCards.module.css
@@ -31,7 +31,7 @@
 }
 @container playerCards (min-width: 768px) {
   .headerRow {
-    margin-bottom: -16px;
+    margin-bottom: -4px;
     border-radius: 20px 20px 0 0;
   }
 }
@@ -74,6 +74,7 @@
     flex: none;
     width: 92px;
     padding: 0 16px;
+    justify-content: center;
   }
 }
 
@@ -101,7 +102,6 @@
 @container playerCards (min-width: 768px) {
   .headerText {
     font-size: 12px;
-    text-align: left;
   }
 }
 .headerCellPlayer .headerText {
@@ -111,6 +111,9 @@
   .headerCellPlayer .headerText {
     text-align: left;
   }
+}
+.headerCellData .headerText {
+  text-align: center;
 }
 
 .card {
